{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 56,
  "lineage": "6dd0f60b-162d-57e8-cdb6-63f04fb1d5e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001b20f4b5f26cd57",
            "arn": "arn:aws:ec2:us-west-2:388691194728:elastic-ip/eipalloc-001b20f4b5f26cd57",
            "domain": "vpc",
            "id": "eipalloc-001b20f4b5f26cd57",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-92-27-162.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.27.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-eip-1",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-eip-1",
              "Project": "ollama-chat-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca669015da6756d4",
            "arn": "arn:aws:ec2:us-west-2:388691194728:elastic-ip/eipalloc-0ca669015da6756d4",
            "domain": "vpc",
            "id": "eipalloc-0ca669015da6756d4",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-216-146-120.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.146.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-eip-2",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-eip-2",
              "Project": "ollama-chat-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ollama_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:internet-gateway/igw-093b5eb95b2adc5bf",
            "id": "igw-093b5eb95b2adc5bf",
            "owner_id": "388691194728",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-igw",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-igw",
              "Project": "ollama-chat-app"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/ollama-chat-app-alb/61e6c538f62e08ef",
            "arn_suffix": "app/ollama-chat-app-alb/61e6c538f62e08ef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ollama-chat-app-alb-1785136754.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/ollama-chat-app-alb/61e6c538f62e08ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ollama-chat-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-037d0be75b3bacff5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a61f90e99c5669e"
              },
              {
                "subnet_id": "subnet-0c4089d009acc8d9e"
              }
            ],
            "subnets": [
              "subnet-02a61f90e99c5669e",
              "subnet-0c4089d009acc8d9e"
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-alb",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-alb",
              "Project": "ollama-chat-app"
            },
            "vpc_id": "vpc-0d541da8673e1bf48",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/ollama-chat-app-alb/61e6c538f62e08ef/ee1e84ea1eb1cd06",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-frontend-tg/b59de49acca00238",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/ollama-chat-app-alb/61e6c538f62e08ef/ee1e84ea1eb1cd06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:loadbalancer/app/ollama-chat-app-alb/61e6c538f62e08ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-http-listener",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-http-listener",
              "Project": "ollama-chat-app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-backend-tg/02da349cac30dd6a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener-rule/app/ollama-chat-app-alb/61e6c538f62e08ef/ee1e84ea1eb1cd06/cf4b6de1042edf55",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener-rule/app/ollama-chat-app-alb/61e6c538f62e08ef/ee1e84ea1eb1cd06/cf4b6de1042edf55",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:listener/app/ollama-chat-app-alb/61e6c538f62e08ef/ee1e84ea1eb1cd06",
            "priority": 100,
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-api-routing",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-api-routing",
              "Project": "ollama-chat-app"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend_tg",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-backend-tg/02da349cac30dd6a",
            "arn_suffix": "targetgroup/ollama-chat-app-backend-tg/02da349cac30dd6a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-backend-tg/02da349cac30dd6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ollama-chat-app-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-tg",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-tg",
              "Project": "ollama-chat-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-frontend-tg/b59de49acca00238",
            "arn_suffix": "targetgroup/ollama-chat-app-frontend-tg/b59de49acca00238",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:388691194728:targetgroup/ollama-chat-app-frontend-tg/b59de49acca00238",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ollama-chat-app-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-frontend-tg",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-frontend-tg",
              "Project": "ollama-chat-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001b20f4b5f26cd57",
            "association_id": "eipassoc-0d5552a1b894215f8",
            "connectivity_type": "public",
            "id": "nat-0cf77bca86f64f419",
            "network_interface_id": "eni-0b59916e856dcf124",
            "private_ip": "10.0.1.242",
            "public_ip": "35.92.27.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a61f90e99c5669e",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-gw-1",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-gw-1",
              "Project": "ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca669015da6756d4",
            "association_id": "eipassoc-0215832c713d29337",
            "connectivity_type": "public",
            "id": "nat-05014f858210a8fb3",
            "network_interface_id": "eni-06ae42b89eb3b587e",
            "private_ip": "10.0.2.218",
            "public_ip": "34.216.146.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c4089d009acc8d9e",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-gw-2",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-nat-gw-2",
              "Project": "ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "backend_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:network-acl/acl-0984264ef592444b1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0984264ef592444b1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 8000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 8000
              }
            ],
            "owner_id": "388691194728",
            "subnet_ids": [
              "subnet-0b1e520cc000b7a46",
              "subnet-0eced7b1302efd78a"
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-nacl",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-nacl",
              "Project": "ollama-chat-app"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-09eeb7fb99de631f9",
            "id": "rtb-09eeb7fb99de631f9",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf77bca86f64f419",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-rt-1",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-rt-1",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-062357fc081415297",
            "id": "rtb-062357fc081415297",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05014f858210a8fb3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-rt-2",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-rt-2",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:route-table/rtb-096f9573b65a6ddbc",
            "id": "rtb-096f9573b65a6ddbc",
            "owner_id": "388691194728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093b5eb95b2adc5bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-rt",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-rt",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_vpc.ollama_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff443d57e6df0d6",
            "route_table_id": "rtb-09eeb7fb99de631f9",
            "subnet_id": "subnet-0eced7b1302efd78a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c51d496712667578",
            "route_table_id": "rtb-062357fc081415297",
            "subnet_id": "subnet-0b1e520cc000b7a46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.ollama_igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5f3d45f061a0b99",
            "route_table_id": "rtb-096f9573b65a6ddbc",
            "subnet_id": "subnet-02a61f90e99c5669e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07466a989357f24ce",
            "route_table_id": "rtb-096f9573b65a6ddbc",
            "subnet_id": "subnet-0c4089d009acc8d9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ollama_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-037d0be75b3bacff5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d0be75b3bacff5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ollama-chat-app-alb-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-alb-sg",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-alb-sg",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-029fd572adc420b61",
            "description": "Security group for Flask backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029fd572adc420b61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037d0be75b3bacff5"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ollama-chat-app-backend-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-sg",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-backend-sg",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:security-group/sg-0012f67db51ba6554",
            "description": "Security group for React frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012f67db51ba6554",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037d0be75b3bacff5"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ollama-chat-app-frontend-sg",
            "name_prefix": "",
            "owner_id": "388691194728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-frontend-sg",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-frontend-sg",
              "Project": "ollama-chat-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.ollama_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-0eced7b1302efd78a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eced7b1302efd78a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-subnet-1",
              "Project": "ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-subnet-1",
              "Project": "ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-0b1e520cc000b7a46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1e520cc000b7a46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-subnet-2",
              "Project": "ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-private-subnet-2",
              "Project": "ollama-chat-app",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-02a61f90e99c5669e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a61f90e99c5669e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-subnet-1",
              "Project": "ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-subnet-1",
              "Project": "ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:subnet/subnet-0c4089d009acc8d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4089d009acc8d9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388691194728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-subnet-2",
              "Project": "ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-public-subnet-2",
              "Project": "ollama-chat-app",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d541da8673e1bf48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ollama_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ollama_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:388691194728:vpc/vpc-0d541da8673e1bf48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7e68fc7e2a50bac",
            "default_route_table_id": "rtb-096bc87e36f35df05",
            "default_security_group_id": "sg-027df7fc5531fc3db",
            "dhcp_options_id": "dopt-0b6164978718ff062",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d541da8673e1bf48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096bc87e36f35df05",
            "owner_id": "388691194728",
            "tags": {
              "Environment": "production",
              "Name": "ollama-chat-app-vpc",
              "Project": "ollama-chat-app"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ollama-chat-app-vpc",
              "Project": "ollama-chat-app"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}